use repeated photo field for bulk category upload
